force-app/main/default/objects/SmartBill_Index__c/SmartBill_Index__c.object-meta.xml
<CustomObject>
    <description>Tracks SmartBill Index pricing</description>
    <label>SmartBill Index</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>SmartBill Index Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SmartBill Indexes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>