force-app/main/default/objects/SmartBill_Index__c/fields/Above_threshold_cost__c.field-meta.xml
<CustomField>
    <fullName>Above_threshold_cost__c</fullName>
    <description>Distribution costs for usage above the monthly threshold</description>
    <inlineHelpText>Distribution costs for usage above the monthly threshold</inlineHelpText>
    <label>Above threshold cost</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>