force-app/main/default/objects/SmartBill_Index__c/fields/Below_threshold_distribution_cost__c.field-meta.xml
<CustomField>
    <fullName>Below_threshold_distribution_cost__c</fullName>
    <description>Cost per therm for monthly usage below the threshhold</description>
    <inlineHelpText>Cost per therm for monthly usage below the threshhold</inlineHelpText>
    <label>Below threshold distribution cost</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>