force-app/main/default/objects/SmartBill_Index__c/fields/Below_threshold_distribution_cost_COM__c.field-meta.xml
<CustomField>
    <fullName>Below_threshold_distribution_cost_COM__c</fullName>
    <description>Cost per therm for monthly usage below the threshhold</description>
    <inlineHelpText>Cost per therm for monthly usage below the threshhold</inlineHelpText>
    <label>Below threshold distribution cost COM</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>