force-app/main/default/objects/SmartBill_Index__c/fields/Dist_Fixed_Monthly_30000__c.field-meta.xml
<CustomField>
    <fullName>Dist_Fixed_Monthly_30000__c</fullName>
    <description>Monthly fixed charge for usage greater than 30000 therms/year</description>
    <inlineHelpText>Monthly fixed charge for usage greater than 30000 therms/year</inlineHelpText>
    <label>Dist Fixed Monthly (&gt; 30000)</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>