force-app/main/default/objects/SmartBill_Index__c/fields/Dist_Fixed_Monthly_5000_or_less__c.field-meta.xml
<CustomField>
    <fullName>Dist_Fixed_Monthly_5000_or_less__c</fullName>
    <description>Monthly fixed charge for usage 5000 therms/year or less</description>
    <inlineHelpText>Monthly fixed charge for usage 5000 therms/year or less</inlineHelpText>
    <label>Dist Fixed Monthly (5000 or less)</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>