force-app/main/default/objects/SmartBill_Index__c/fields/Dist_per_Therm_5000_or_less__c.field-meta.xml
<CustomField>
    <fullName>Dist_per_Therm_5000_or_less__c</fullName>
    <description>Variable distribution charge per therm for usage 5000 therms/year or less</description>
    <inlineHelpText>Variable distribution charge per therm for usage 5000 therms/year or less</inlineHelpText>
    <label>Dist per Therm (5000 or less)</label>
    <precision>12</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>