force-app/main/default/objects/SmartBill_Index__c/fields/Dist_per_Therm_5001_to_30000__c.field-meta.xml
<CustomField>
    <fullName>Dist_per_Therm_5001_to_30000__c</fullName>
    <description>Variable distribution charge per therm for usage 5001-30000 therms/year</description>
    <inlineHelpText>Variable distribution charge per therm for usage 5001-30000 therms/year</inlineHelpText>
    <label>Dist per Therm (5001 to 30000)</label>
    <precision>12</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>