force-app/main/default/objects/SmartBill_Index__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>The five divisions for WY/NE choice program.</description>
    <inlineHelpText>The five divisions for WY/NE choice program.</inlineHelpText>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Program__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Western</fullName>
            </value>
            <value>
                <fullName>Casper</fullName>
            </value>
            <value>
                <fullName>Gillette</fullName>
            </value>
            <value>
                <fullName>Torrington</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>