force-app/main/default/objects/SmartBill_Index__c/fields/Fuel_Gross_Up__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Gross_Up__c</fullName>
    <defaultValue>4.24</defaultValue>
    <description>What percentage of delivered gas goes to the utility for fuel</description>
    <inlineHelpText>What percentage of delivered gas goes to the utility for fuel</inlineHelpText>
    <label>Fuel Gross-Up</label>
    <precision>10</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>