force-app/main/default/objects/SmartBill_Index__c/fields/Index_1__c.field-meta.xml
<CustomField>
    <fullName>Index_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>First index component</description>
    <inlineHelpText>First index component</inlineHelpText>
    <label>Index 1</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Used by</relationshipLabel>
    <relationshipName>Index_Child</relationshipName>
    <type>Lookup</type>
</CustomField>