force-app/main/default/objects/SmartBill_Index__c/fields/Index_1_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Index_1_Percentage__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Index 1 Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>