force-app/main/default/objects/SmartBill_Index__c/fields/Index_2__c.field-meta.xml
<CustomField>
    <fullName>Index_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Index Component 2</description>
    <inlineHelpText>Index Component 2</inlineHelpText>
    <label>Index 2</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Used By 2</relationshipLabel>
    <relationshipName>Index_Child_2</relationshipName>
    <type>Lookup</type>
</CustomField>