force-app/main/default/objects/SmartBill_Index__c/fields/Index_2_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Index_2_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Index 2 Percentage</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>