force-app/main/default/objects/SmartBill_Index__c/fields/Index_3__c.field-meta.xml
<CustomField>
    <fullName>Index_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Index Component 3</description>
    <inlineHelpText>Index Component 3</inlineHelpText>
    <label>Index 3</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Used by 3</relationshipLabel>
    <relationshipName>Index_Child_3</relationshipName>
    <type>Lookup</type>
</CustomField>