force-app/main/default/objects/SmartBill_Index__c/fields/Margin_year_1__c.field-meta.xml
<CustomField>
    <fullName>Margin_year_1__c</fullName>
    <description>Margin per therm for SmartBill</description>
    <inlineHelpText>Margin per therm for SmartBill</inlineHelpText>
    <label>Margin Year 1 (per therm)</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>