force-app/main/default/objects/SmartBill_Index__c/fields/Margin_Year_2_per_therm__c.field-meta.xml
<CustomField>
    <fullName>Margin_Year_2_per_therm__c</fullName>
    <label>Margin Year 2 (per therm)</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>