force-app/main/default/objects/SmartBill_Index__c/fields/Maximum_Annual_Usage__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Annual_Usage__c</fullName>
    <description>At what usage would we not want to offer a smart bill?</description>
    <inlineHelpText>At what usage would we not want to offer a smart bill?</inlineHelpText>
    <label>Maximum Annual Usage</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>