force-app/main/default/objects/SmartBill_Index__c/fields/Minimum_Aggregate_Margin_Year_2__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Aggregate_Margin_Year_2__c</fullName>
    <description>Floor margin/customer for smart bill</description>
    <inlineHelpText>Floor margin/customer for smart bill</inlineHelpText>
    <label>Minimum Aggregate Margin (Year 2)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>