force-app/main/default/objects/SmartBill_Index__c/fields/Minimum_Annual_Usage__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Annual_Usage__c</fullName>
    <description>How many therms/year is the minimum required to get a smart bill offer?</description>
    <inlineHelpText>How many therms/year is the minimum required to get a smart bill offer?</inlineHelpText>
    <label>Minimum Annual Usage</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>