force-app/main/default/objects/SmartBill_Index__c/fields/Monthly_Supplier_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Supplier_Fee__c</fullName>
    <description>Monthly fee charged to us to have this customer</description>
    <inlineHelpText>Monthly fee charged to us to have this customer</inlineHelpText>
    <label>Monthly Supplier Fee</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>