force-app/main/default/objects/SmartBill_Index__c/fields/Nebraska_COM_Dist_Fixed__c.field-meta.xml
<CustomField>
    <fullName>Nebraska_COM_Dist_Fixed__c</fullName>
    <description>Monthly fixed distribution charge for Nebraska Commercial</description>
    <inlineHelpText>Monthly fixed distribution charge for Nebraska Commercial</inlineHelpText>
    <label>COM Dist Fixed</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>