force-app/main/default/objects/SmartBill_Index__c/fields/Nebraska_COM_Distribution_Threshhold__c.field-meta.xml
<CustomField>
    <fullName>Nebraska_COM_Distribution_Threshhold__c</fullName>
    <description>Monthly volume subject to the STEP 1 cost...Currently 40 therms for Commercial</description>
    <inlineHelpText>Monthly volume subject to the STEP 1 cost...Currently 40 therms for Commercial</inlineHelpText>
    <label>COM Distribution Threshhold</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>