force-app/main/default/objects/SmartBill_Index__c/fields/Nebraska_Dist_Fixed__c.field-meta.xml
<CustomField>
    <fullName>Nebraska_Dist_Fixed__c</fullName>
    <description>Monthly fixed cost for Nebraska distribution</description>
    <inlineHelpText>Monthly fixed cost for Nebraska distribution</inlineHelpText>
    <label>Dist Fixed</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>