force-app/main/default/objects/SmartBill_Index__c/fields/Nebraska_Distribution_Threshhold__c.field-meta.xml
<CustomField>
    <fullName>Nebraska_Distribution_Threshhold__c</fullName>
    <defaultValue>40</defaultValue>
    <description>Monthly volume subject to the STEP 1 cost...Currently 40 therms</description>
    <inlineHelpText>Monthly volume subject to the STEP 1 cost...Currently 40 therms</inlineHelpText>
    <label>Resi Distribution Threshhold</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>