force-app/main/default/objects/SmartBill_Index__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>The three choice programs</description>
    <inlineHelpText>The three choice programs</inlineHelpText>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ag</fullName>
            </value>
            <value>
                <fullName>Nebraska</fullName>
            </value>
            <value>
                <fullName>Wyoming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>