force-app/main/default/objects/SmartBill_Index__c/fields/Storage_Cost__c.field-meta.xml
<CustomField>
    <fullName>Storage_Cost__c</fullName>
    <description>per therm</description>
    <inlineHelpText>per therm</inlineHelpText>
    <label>Storage Cost</label>
    <precision>10</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>