force-app/main/default/objects/SmartBill_Index__c/fields/Tax_Factor__c.field-meta.xml
<CustomField>
    <fullName>Tax_Factor__c</fullName>
    <description>Tax and Franchise gross-up (example: enter 1.071166 for a 7.1166% tax rate)</description>
    <inlineHelpText>Tax and Franchise gross-up (example: enter 1.071166 for a 7.1166% tax rate)</inlineHelpText>
    <label>Tax Factor</label>
    <precision>16</precision>
    <scale>14</scale>
    <type>Number</type>
</CustomField>