force-app/main/default/objects/SmartBill_Index__c/fields/Transport_Cost__c.field-meta.xml
<CustomField>
    <fullName>Transport_Cost__c</fullName>
    <description>per Dth</description>
    <inlineHelpText>per Dth</inlineHelpText>
    <label>Transport Cost</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>