force-app/main/default/objects/SmartBill_Index__c/fields/Transport_Reservation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Transport_Reservation_Fee__c</fullName>
    <description>per decatherm</description>
    <inlineHelpText>per decatherm</inlineHelpText>
    <label>Transport Reservation Fee</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>