force-app/main/default/objects/SmartBill_Index__c/fields/Wholesale_Cost_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Wholesale_Cost_Adjustment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for miscellaneous adjustments to wholesale cost (for optimization of transport, storage, capacity, etc).</description>
    <inlineHelpText>Used for miscellaneous adjustments to wholesale cost (for optimization of transport, storage, capacity, etc).</inlineHelpText>
    <label>Wholesale Cost Adjustment</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Wholesale Cost Adjustments</relationshipLabel>
    <relationshipName>Wholesale_Cost_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>