force-app/main/default/objects/SmartBill_Index__c/fields/year_1_cost__c.field-meta.xml
<CustomField>
    <fullName>year_1_cost__c</fullName>
    <description>Cost per therm for first year of SmartBill.</description>
    <inlineHelpText>Cost per therm for first year of SmartBill.</inlineHelpText>
    <label>Year 1 Cost (per therm)</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>