force-app/main/default/objects/SmartBill_Index__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>Division__c</columns>
    <columns>year_1_cost__c</columns>
    <columns>Margin_year_1__c</columns>
    <columns>year_2_cost__c</columns>
    <columns>Margin_Year_2_per_therm__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>