force-app/main/default/objects/SmartBill_Index__c/listViews/All_Utility_Costs.listView-meta.xml
<ListView>
    <fullName>All_Utility_Costs</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All--Utility Costs</label>
</ListView>